infrastructure/network.tf
resource "aws_vpc" "testApp01-vpc" {
  cidr_block = var.vpc_cidr_block

}

#Blocking the default security group from doing anything. EDIT - commented out this checkov suggestion as it doesn't make sense to me.
#resource "aws_default_security_group" "default" {
#  vpc_id = aws_vpc.testApp01-vpc.id

#  ingress {
#    protocol  = "1"
#    self      = true
#    from_port = 0
#    to_port   = 0
#  }
#
#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }
#}

resource "aws_subnet" "public" {
  count                   = var.az_count
  vpc_id                  = aws_vpc.testApp01-vpc.id
  cidr_block              = cidrsubnet(var.vpc_cidr_block, 4, var.az_count + count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true
  tags = {
    Name = "PublicSubnet ${count.index + 1}"
  }

}

resource "aws_subnet" "private" {
  count             = var.az_count
  vpc_id            = aws_vpc.testApp01-vpc.id
  cidr_block        = cidrsubnet(var.vpc_cidr_block, 4, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "PrivateSubnet ${count.index + 1}"
  }
}

resource "aws_security_group" "lb_sg" {
  name        = "lb-sg"
  description = "Security group for load balancer"
  vpc_id      = aws_vpc.testApp01-vpc.id

}

resource "aws_security_group_rule" "ecs_egress" {
  security_group_id = aws_security_group.ecs_sg.id
  description       = "Allow all egress from ECS tasks"
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

data "aws_ec2_managed_prefix_list" "cloudfront" {
  name = "com.amazonaws.global.cloudfront.origin-facing"
}

resource "aws_security_group_rule" "alb_cloudfront_https_ingress_only" {
  security_group_id = aws_security_group.lb_sg.id
  description       = "Allow HTTPS access only from CloudFront CIDR blocks"
  from_port         = 443
  protocol          = "tcp"
  prefix_list_ids   = [data.aws_ec2_managed_prefix_list.cloudfront.id]
  to_port           = 443
  type              = "ingress"
}

resource "aws_security_group_rule" "alb_cloudfront_egress_to_ecs" {
  security_group_id        = aws_security_group.lb_sg.id
  description              = "Egress elb to the ecs/ec2 host"
  from_port                = 8000
  protocol                 = "tcp"
  to_port                  = 8000
  type                     = "egress"
  source_security_group_id = aws_security_group.ecs_sg.id
}


resource "aws_security_group" "ecs_sg" {
  name_prefix = "ecs-sg"
  vpc_id      = aws_vpc.testApp01-vpc.id

  ingress {
    description     = "Allow ingress traffic from ALB to ECS"
    from_port       = 8000
    to_port         = 8000
    protocol        = "tcp"
    security_groups = [aws_security_group.lb_sg.id]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_internet_gateway" "internet-gw" {
  vpc_id = aws_vpc.testApp01-vpc.id
}

resource "aws_route_table" "internet-access-rt" {
  vpc_id = aws_vpc.testApp01-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet-gw.id
  }
}

resource "aws_route_table_association" "public_subnet_assoc" {
  count          = var.az_count
  subnet_id      = element(aws_subnet.public[*].id, count.index)
  route_table_id = aws_route_table.internet-access-rt.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.testApp01-vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway[0].id
  }
    tags = {
    Name = "${var.app-stack}_PrivateRT_${count.index}_${var.environment}"
  }
}

resource "aws_route_table_association" "private_subnet_association" {
  count = var.az_count
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}

resource "aws_nat_gateway" "nat_gateway" {
  count         = var.az_count
  subnet_id     = aws_subnet.public[count.index].id
  allocation_id = aws_eip.nat_gateway[count.index].id

  tags = {
    Name = "${var.app-stack}_NATGateway_${count.index}_${var.environment}"
  }
}

resource "aws_eip" "nat_gateway" {
  count = var.az_count
}

# Route tables for private subnets through NAT gateways
resource "aws_route_table" "private" {
  count  = var.az_count
  vpc_id = aws_vpc.testApp01-vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway[count.index].id
  }

  tags = {
    Name = "${var.app-stack}_PrivateRT_${count.index}_${var.environment}"
  }
}

resource "aws_route_table_association" "private_subnet_assoc" {
  count          = var.az_count
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}
